--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,29 @@
 version: "3.9"
 
 services:
-  web:
-    depends_on:
-      - db
-    build:
-      context: ./src
-      dockerfile: Dockerfile
-    image: bartoszcholewa-backend
-    env_file:
-      - src/.env
-    ports:
-      - "8000:8000"
-    command: sh -c "chmod +x /app/migrate.sh && sh /app/migrate.sh && /app/entrypoint.sh"
+#  web:
+  #    depends_on:
+  #      - db
+  #    build:
+  #      context: ./src
+  #      dockerfile: Dockerfile
+  #    image: bartoszcholewa-backend
+  #    env_file:
+  #      - src/.env
+  #    ports:
+  #      - "8000:8000"
+  #    command: sh -c "chmod +x /app/migrate.sh && sh /app/migrate.sh && /app/entrypoint.sh"
 
   db:
     image: postgres:alpine
+    restart: always
     env_file:
       - src/.env
-    command: -p 5433
+    command: -p 5434
     expose:
-      - 5433
+      - 5434
     ports:
-      - "5433:5433"
+      - "5434:5434"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
 
@@ -30,12 +31,12 @@ services:
     image: redis
     restart: always
     expose:
-      - 6380
+      - 6388
     ports:
-      - "6380:6380"
+      - "6388:6388"
     volumes:
       - redis_data:/data
-    entrypoint: redis-server --appendonly yes --port 6380
+    entrypoint: redis-server --appendonly yes --port 6388
 
 volumes:
   postgres_data:
