--- a/k8s/firststeps/2-helm-values.yaml
+++ b/k8s/firststeps/2-helm-values.yaml
@@ -1,6 +1,6 @@
 # helm repo add jetstack https://charts.jetstack.io
 # helm repo update
-# helm upgrade --install cert-manager jetstack/cert-manager --namespace cert-manager --create-namespace -f k8s/nginx/helm-values.yaml
+# helm upgrade --install cert-manager jetstack/cert-manager --namespace cert-manager --create-namespace -f k8s/firststeps/2-helm-values.yaml
 installCRDs: true
 ingressShim:
   defaultIssuerName: letsencrypt-prod
