kubernetes part 6 - actions

--- a/k8s/django/bartoszcholewa-deployment.yaml
+++ b/k8s/django/bartoszcholewa-deployment.yaml
@@ -27,8 +27,9 @@ spec:
         app: bartoszcholewa
     spec:
       containers:
-        - image: ghcr.io/bartoszcholewa/bartoszcholewa-backend-web:latest
-          name: bartoszcholewa
+        - name: bartoszcholewa
+          image: ghcr.io/bartoszcholewa/bartoszcholewa-backend-web:latest
+          imagePullPolicy: Always
           envFrom:
             - secretRef:
                 name: bartoszcholewa-secrets
