--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   test_django:
-    uses: ${{ github.repository }}/.github/workflows/test-django.yaml@main
+    uses: ./.github/workflows/test-django.yaml@main
   build-and-push-image:
     runs-on: ubuntu-latest
     permissions:
