--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,4 +38,4 @@ jobs:
         with:
           context: ./src
           push: true
-          tags: latest, ${GITHUB_SHA::7}
+          tags: latest, ${{ github.event.pull_request.head.sha::7 }}
