--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,6 +26,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Declare some variables
+        id: vars
+        shell: bash
+        run: |
+          echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
@@ -38,4 +45,4 @@ jobs:
         with:
           context: ./src
           push: true
-          tags: latest, ${{ github.event.pull_request.head.sha::7 }}
+          tags: latest, ${{ steps.vars.outputs.sha_short }}
