--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -51,5 +51,5 @@ jobs:
         with:
           context: ./src
           push: true
-          tags: latest, ${{ steps.vars.outputs.sha_short }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
