kubernetes part 6 - actions

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,3 +46,6 @@ jobs:
           context: ./src
           push: true
           tags: ghcr.io/bartoszcholewa/bartoszcholewa-backend:latest,ghcr.io/bartoszcholewa/bartoszcholewa-backend:${{ steps.vars.outputs.sha_short }}
+
+      - name: Test Kubernetes Config
+        run: kubectl get pods -w
