--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,4 +30,6 @@ jobs:
         run: |
           mkdir ${HOME}/.kube
           echo ${{ secret.KUBE_CONFIG_DATA }} | base64 --decode > ${HOME}/.kube/config
-          cat
+
+      - name: Test Kubernetes Config
+        run: kubectl get pods -w
