kubernetes part 6 - actions deploy

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,7 +11,7 @@ on:
 jobs:
   build_job:
     uses: bartoszcholewa/bartoszcholewa-backend/.github/workflows/build.yaml@main
-  deploy-to-kubernetes:
+  deploy_to_kubernetes:
     runs-on: ubuntu-latest
     needs: [ build_job ]
 
