--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -47,10 +47,15 @@ jobs:
           push: true
           tags: ghcr.io/bartoszcholewa/bartoszcholewa-backend:latest,ghcr.io/bartoszcholewa/bartoszcholewa-backend:${{ steps.vars.outputs.sha_short }}
 
+  deploy-to-kubernetes:
+    runs-on: ubuntu-latest
+    needs: [ test_django_job ]
+    steps:
       - name: Create kubeconfig
         run: |
           mkdir ${HOME}/.kube
           echo ${{ secrets.KUBE_CONFIG_DATA }} | base64 --decode > ${HOME}/.kube/config
+          cat ${HOME}/.kube/config
 
       - name: Test Kubernetes Config
         run: kubectl get pods -w
