--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -14,8 +14,10 @@ env:
 
 jobs:
   test_django_job:
+    name: Test Django before build
     uses: bartoszcholewa/bartoszcholewa-backend/.github/workflows/test-django.yaml@main
   build_and_push_image_job:
+    name: Build and push docker image
     runs-on: ubuntu-latest
     needs: [ test_django_job ]
     permissions:
@@ -48,6 +50,7 @@ jobs:
           tags: ghcr.io/bartoszcholewa/bartoszcholewa-backend:latest,ghcr.io/bartoszcholewa/bartoszcholewa-backend:${{ steps.vars.outputs.sha_short }}
 
   deploy-to-kubernetes:
+    name: Deploy changes to Kubernetes
     runs-on: ubuntu-latest
     needs: [ build_and_push_image_job ]
     steps:
@@ -55,7 +58,16 @@ jobs:
         run: |
           mkdir ${HOME}/.kube
           echo ${{ secrets.KUBE_CONFIG_DATA }} | base64 --decode > ${HOME}/.kube/config
-          cat ${HOME}/.kube/config
 
-      - name: Test Kubernetes Config
-        run: kubectl get pods -w
+      - name: Update Deployment image
+        run: |
+          kubectl set image deployment/bartoszcholewa-app bartoszcholewa=ghcr.io/bartoszcholewa/bartoszcholewa-backend:${{ steps.vars.outputs.sha_short }}
+
+      - name: Wait for rollout to finish
+        run: |
+          kubectl rollout status deployment/bartoszcholewa-app
+
+      - name: Migrate Database Command
+        run: |
+          export SINGLE_POD_NAME=$(kubectl get pod -l app=bartoszcholewa -o jsonpath="{.items[0].metadata.name}")
+          kubectl exec -it $SINGLE_POD_NAME -- bash /app/migrate.sh
