--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -9,6 +9,7 @@ on:
     branches: [ main ]
 
 env:
+  SHORT
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
@@ -54,6 +55,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ build_and_push_image_job ]
     steps:
+      - name: Declare some variables
+        id: vars
+        shell: bash
+        run: |
+          echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+
       - name: Create kubeconfig
         run: |
           mkdir ${HOME}/.kube
