--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -16,8 +16,8 @@ jobs:
   test_django_job:
     name: Test Django before build
     uses: bartoszcholewa/bartoszcholewa-backend/.github/workflows/test-django.yaml@main
-  build_and_push_image_job:
-    name: Build and push docker image
+  build_push_deploy_image_job:
+    name: Build, push and deploy
     runs-on: ubuntu-latest
     needs: [ test_django_job ]
     permissions:
@@ -54,6 +54,9 @@ jobs:
           mkdir ${HOME}/.kube
           echo ${{ secrets.KUBE_CONFIG_DATA }} | base64 --decode > ${HOME}/.kube/config
 
+      - name:
+          Update deployment secrets:
+
       - name: Update Deployment image
         run: |
           kubectl set image deployment/bartoszcholewa-app bartoszcholewa=ghcr.io/bartoszcholewa/bartoszcholewa-backend:${{ steps.vars.outputs.sha_short }}
@@ -65,4 +68,6 @@ jobs:
       - name: Migrate Database Command
         run: |
           export SINGLE_POD_NAME=$(kubectl get pod -l app=bartoszcholewa -o jsonpath="{.items[0].metadata.name}")
+          echo $SINGLE_POD_NAME
+          kubectl get pods
           kubectl exec -it $SINGLE_POD_NAME -- sh -c "python manage.py migrate --noinput"
