--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -110,4 +110,5 @@ jobs:
 
       - name: Collect Static
         run: |
+          export SINGLE_POD_NAME=$(kubectl get pod -l app=bartoszcholewa -o jsonpath="{.items[0].metadata.name}")
           kubectl exec -it $SINGLE_POD_NAME -- sh -c "python manage.py collectstatic --noinput"
