--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -46,7 +46,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          dockerfile: ./environments/production/Dockerfile
+          file: ./environments/production/Dockerfile
           push: true
           tags: |
             ghcr.io/bartoszcholewa/bartoszcholewa-backend:latest
